plugins {
    id 'dev.architectury.loom' version '1.11.445' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
    id 'org.jetbrains.kotlin.jvm' version '2.2.0'

}



architectury {
    compileOnly()
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }
    // If the module applies the Kotlin plugin, align its toolchain/target
    plugins.withId('org.jetbrains.kotlin.jvm') {
        // Kotlin toolchain (K2+)
        kotlin {
            jvmToolchain(21)
        }

        // Kotlin 1.9+/2.x compilerOptions API
        tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
            compilerOptions {
                jvmTarget.set(org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_21)
                // optional sanity:
                // freeCompilerArgs.addAll("-Xjdk-release=21")
            }
        }

        // Fallback for older kotlin plugin syntax (harmless if unused)
        tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
            if (hasProperty('kotlinOptions')) {
                kotlinOptions {
                    jvmTarget = '21'
                }
            }
        }
    }
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'
    base {
        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
        archivesName = "$rootProject.archives_name-$project.name"
    }
    architectury {
        compileOnly()
    }

    repositories {
        mavenCentral()
        maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
        maven { url 'https://maven.impactdev.net/repository/development/' }
        maven { url 'https://maven.neoforged.net/releases' }
        maven { url 'https://thedarkcolour.github.io/KotlinForForge/' }
        // For GitHub-hosted dependencies via JitPack
        maven { url 'https://jitpack.io' }
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings loom.officialMojangMappings()
        implementation("org.jetbrains.kotlin:kotlin-reflect")
    }

    if (project.path != ':common') {
        loom {
            mods {
                main { // to match the default mod generated for Forge
                    sourceSet project.sourceSets.main
                    sourceSet project(':common').sourceSets.main
                }
            }
        }
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }

    // Configure Maven publishing.
    publishing {
        publications {
            mavenJava(MavenPublication) {
                artifactId = base.archivesName.get()
                from components.java
            }
        }

        // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
        repositories {
            // Add repositories to publish to here.
            // Notice: This block does NOT have the same function as the block in the top level.
            // The repositories here will be used for publishing your artifact, not for
            // retrieving dependencies.
        }
    }
}
